----- cvs ci ------
Sat Mar 10 23:09:47 MEZ 2001
tobi:
* Rewrote the parser core function parseLine. Replaced the endless
  if/elseif chain with a bsearch lookup and a consecutive switch/case
  construct. This should give a performance gain both in terms of
  compile time as well as in terms of run time.
  The comments in the new file tokens.h describe how to add new
  keywords to fidoconfig now.

----- cvs ci ------
Sat Mar 10 16:28:13 NOVT 2001
max:
* fixed arealinks masks: now *:*/* is possible

----- cvs ci ------
Fri Mar  9 14:11:02 NOVT 2001
max:
* new string2addr()
* routeMail, route, routeFile is "the same"

----- cvs ci ------
Mon Mar  5 22:51:20 NOVT 2001
max (patch from Alex Bronin):
* dirlayer.c: d_size for MSVC

----- cvs ci ------
Sun Mar  4 12:05:20 NOVT 2001
max:
* fix "0" groups (to NULL)
* add to doc: set, if, if not, else, elseif, ifdef, ifndef, endif,
  what is [module], etc...

----- cvs ci ------
Sun Feb 25 19:41:44 NOVT 2001
max:
* FRequestFromUpLink changed to denyFwdReqAccess !!!
* new token for hpt denyUncondFwdReqAccess

----- cvs ci ------
Sun Feb 18 14:36:51 NOVT 2001
max:
* keepTrsFiles token for hpt
* [link]BundleNameStyle Amiga

----- cvs ci ------
Sat Feb 17 23:51:48 NOVT 2001
max (patch from Serguei Revtov):
* exit on unrecognized line in config
* unifying of error messages printing in line.c

----- cvs ci ------
Tue Feb 13 22:38:28 NOVT 2001
max:
* doc updates
* change default path to config (rtfm)

----- cvs ci ------
Mon Feb 12 23:51:23 MSK 2001
Nestyurkin Nikolay:
* fix esc. sequent

----- cvs ci ------
Fri Feb  9 22:23:17 NOVT 2001
max:
* removed CarbonArea keyword, use CarbonCopy.

----- cvs ci ------
Sun Jan 28 17:15:41 NOVT 2001
max:
* netmailFlag, autoAreaCreateFlag, areafixEchoLimit

----- cvs ci ------
Sat Jan 27 15:22:41 NOVT 2001
max:
* forwardRequestMask, denyFwdMask, denyFwdFile tokens

----- cvs ci ------
Sat Jan 20 21:56:54 NOVT 2001
max:
+ autopassive token

----- cvs ci ------
Mon Jan 15 14:19:26 NOVT 2001
max: