@@ -1,4 +1,9 @@
 ----- cvs ci ------
+Sun Mar 11 15:31:48 NOVT 2001
+max:
+* minDiskFreeSpace token for hpt
+
+----- cvs ci ------
 Sat Mar 10 23:09:47 MEZ 2001
 tobi:
 * Rewrote the parser core function parseLine. Replaced the endless
